--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node-fetch": "^2.7.0",
-    "@google/generative-ai": "^0.1.2"
+    "@fuyun/generative-ai": "0.1.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
